revamped footer/ made it more responsive

--- a/index.html
+++ b/index.html
@@ -552,100 +552,108 @@
         </p>
       </div>
 
-      <div class="grid grid-cols-2 justify-center items-center mb-8 gap-2">
+      <div
+        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 justify-center items-start gap-4 px-6"
+      >
         <div
-          class="px-3 text-center flex flex-col justify-center items-center text-wrap m-2 space-y-1 font-light"
+          class="text-center flex flex-col items-center space-y-2 font-light"
         >
-          <p class="uppercase font-bold px-3 text-pink-500 border-b">
-            products
+          <p
+            class="uppercase font-bold text-pink-500 border-b pb-1 w-full max-w-xs"
+          >
+            Products
           </p>
           <a
-            class="hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+            class="hover:text-orange-200 transition duration-300 cursor-pointer"
+            >Sunfire Cakes</a
           >
-            Sunfire Cakes
-          </a>
           <a
-            class="hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+            class="hover:text-orange-200 transition duration-300 cursor-pointer"
+            >Sunlight Candies</a
           >
-            Sunlight Candies
-          </a>
           <a
-            class="hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+            class="hover:text-orange-200 transition duration-300 cursor-pointer"
+            >Sunny Lollipops</a
           >
-            Sunny Lollipops
-          </a>
           <a
-            class="tracking-tighter hover:text-orange-200 transition-colors duration-300 cursor-pointer"
-          >
-            Sunbrust Chocolates
-          </a>
-        </div>
-        <div
-          class="px-3 text-center flex flex-col justify-center items-center text-wrap m-2 space-y-1 font-light"
-        >
-          <p class="uppercase font-bold px-3 text-pink-500 border-b">socials</p>
-          <a
-            class="tracking-widest hover:text-orange-200 transition-colors duration-300 cursor-pointer"
-          >
-            <i class="ri-tiktok-line"></i> TikTok
-          </a>
-          <a
-            class="tracking-widest hover:text-orange-200 transition-colors duration-300 cursor-pointer"
-          >
-            <i class="ri-twitter-x-line"></i> Twitter
-          </a>
-          <a
-            class="hover:text-orange-200 transition-colors duration-300 cursor-pointer"
-          >
-            <i class="ri-instagram-line"></i> Instagram
-          </a>
-          <a
-            class="hover:text-orange-200 transition-colors duration-300 cursor-pointer"
-          >
-            <i class="ri-facebook-box-line"></i> Facebook
-          </a>
-        </div>
-        <div
-          class="px-3 text-center text-wrap m-2 flex flex-col justify-center items-center space-y-1 font-light"
-        >
-          <p class="uppercase font-bold text-pink-500 border-b">Information</p>
-          <a
-            class="hover:text-orange-200 transition-colors duration-300 cursor-pointer"
-          >
-            About us
-          </a>
-          <a
-            class="hover:text-orange-200 transition-colors duration-300 cursor-pointer"
-          >
-            Contact us
-          </a>
-          <a
-            class="cursor-pointer hover:text-orange-200 transition-colors duration-300"
-            >Frequently Asked Questions</a
+            class="hover:text-orange-200 transition duration-300 cursor-pointer"
+            >Sunburst Chocolates</a
           >
         </div>
+
         <div
-          class="px-3 text-center flex flex-col justify-center items-center text-wrap m-2 space-y-1 font-light"
+          class="text-center flex flex-col items-center space-y-2 font-light"
         >
-          <p class="uppercase font-bold px-3 text-pink-500 border-b">
+          <p
+            class="uppercase font-bold text-pink-500 border-b pb-1 w-full max-w-xs"
+          >
+            Socials
+          </p>
+          <a
+            class="hover:text-orange-200 transition duration-300 cursor-pointer"
+            ><i class="ri-tiktok-line"></i> TikTok</a
+          >
+          <a
+            class="hover:text-orange-200 transition duration-300 cursor-pointer"
+            ><i class="ri-twitter-x-line"></i> Twitter</a
+          >
+          <a
+            class="hover:text-orange-200 transition duration-300 cursor-pointer"
+            ><i class="ri-instagram-line"></i> Instagram</a
+          >
+          <a
+            class="hover:text-orange-200 transition duration-300 cursor-pointer"
+            ><i class="ri-facebook-box-line"></i> Facebook</a
+          >
+        </div>
+
+        <div
+          class="text-center flex flex-col items-center space-y-2 font-light"
+        >
+          <p
+            class="uppercase font-bold text-pink-500 border-b pb-1 w-full max-w-xs"
+          >
+            Information
+          </p>
+          <a
+            class="hover:text-orange-200 transition duration-300 cursor-pointer"
+            >About Us</a
+          >
+          <a
+            class="hover:text-orange-200 transition duration-300 cursor-pointer"
+            >Contact Us</a
+          >
+          <a
+            class="hover:text-orange-200 transition duration-300 cursor-pointer"
+            >FAQs</a
+          >
+        </div>
+
+        <div
+          class="text-center flex flex-col items-center space-y-2 font-light"
+        >
+          <p
+            class="uppercase font-bold text-pink-500 border-b pb-1 w-full max-w-xs"
+          >
             More Of Us
           </p>
           <a
-            class="px-3 hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+            class="hover:text-orange-200 transition duration-300 cursor-pointer"
+            >Events</a
           >
-            Events
-          </a>
           <a
-            class="px-3 hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+            class="hover:text-orange-200 transition duration-300 cursor-pointer"
+            >Jobs</a
           >
-            Jobs
-          </a>
-          <p>&nbsp;&nbsp;</p>
-          <p>&nbsp;</p>
         </div>
       </div>
-      <div class="flex justify-center border-t border-pink-500 bg-pink-800">
-        <p class="py-2">@2025 Sunny Delights. All rights reserved.</p>
+
+      <div
+        class="flex justify-center border-t border-pink-500 bg-pink-800 mt-6"
+      >
+        <p class="py-2 text-sm text-center">
+          @2025 Sunny Delights. All rights reserved.
+        </p>
       </div>
     </footer>
   </body>
