--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <body class="bg-black">
     <!-- HEADER AND NAVI BAR -->
     <header
-      class="fixed top-0 z-20 w-full border-b border-pink-500"
+      class="fixed top-0 z-10 w-full border-b border-pink-500"
       x-data="{ open: false }"
     >
       <nav
@@ -532,6 +532,38 @@
         class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6"
       >
         <!-- Products will be injected here -->
+      </div>
+
+      <!-- Modal Structure -->
+      <div
+        id="productModal"
+        class="modal hidden fixed inset-0 bg-black/75 flex justify-center items-center"
+      >
+        <div class="modal-content bg-white p-6 rounded-lg w-80 sm:w-96">
+          <img
+            id="modalImage"
+            class="w-full h-48 object-cover rounded-md mb-4"
+            src=""
+            alt="Product Image"
+          />
+          <h2 id="modalTitle" class="text-2xl font-semibold mb-2"></h2>
+          <p id="modalDescription" class="text-gray-700 mb-2"></p>
+          <p id="modalPrice" class="text-lg font-bold mb-4"></p>
+          <div class="flex justify-center items-center gap-5">
+            <button
+              id="addToCartButton"
+              class="bg-pink-500 text-white px-4 py-1 rounded hover:bg-pink-700"
+            >
+              Add to Cart
+            </button>
+            <button
+              id="closeModal"
+              class="border border-pink-600 text-pink-600 px-5 py-1 rounded hover:bg-pink-700 hover:text-white"
+            >
+              Close
+            </button>
+          </div>
+        </div>
       </div>
 
       <!-- Cart Counter -->
