edited modal toggle

--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
       <!-- Modal Structure -->
       <div
         id="productModal"
-        class="modal hidden fixed inset-0 bg-black/75 flex justify-center items-center"
+        class="modal fixed inset-0 bg-black/75 hidden justify-center items-center"
       >
         <div class="modal-content bg-white p-6 rounded-lg w-80 sm:w-96">
           <img
