edits on the about me

--- a/index.html
+++ b/index.html
@@ -273,7 +273,9 @@
       id="home"
       class="flex justify-center items-center lg:justify-end mt-32 mb-12"
     >
-      <div class="flex items-center w-full max-w-6xl px-5 space-x-6">
+      <div
+        class="flex items-center justify-center w-full max-w-6xl px-5 space-x-6"
+      >
         <!-- Heading Box -->
         <div
           class="text-pink-600 uppercase font-bold text-lg text-center leading-relaxed flex flex-col items-center space-y-2 p-2"
@@ -491,27 +493,26 @@
     <div class="w-full h-10 divider border-t border-b border-pink-500"></div>
 
     <!-- ABOUT -->
-    <section
-      id="about"
-      class="flex flex-col justify-center items-center p-5 text-center text-wrap m-10 border border-pink-500 bg-rose-100"
-    >
-      <div class="font-semibold leading-relaxed text-lg text-pink-600">
+    <section id="about" class="flex flex-col justify-center items-center">
+      <div
+        class="font-semibold leading-relaxed text-lg text-pink-600 p-5 text-center text-wrap m-10 border border-pink-500 bg-rose-100 sm:p-6 sm:m-8 md:p-8 md:m-10 lg:p-10 lg:m-12 xl:p-12 xl:m-16"
+      >
         <p
-          class="tracking-widest italic bg-gradient-to-b to-pink-500 bg-clip-text text-transparent font-bold mb-5"
+          class="tracking-widest italic bg-gradient-to-b to-pink-500 bg-clip-text text-transparent font-bold mb-5 sm:text-xl md:text-2xl lg:text-3xl pb-2"
         >
           Sunny Delights
         </p>
 
-        <p class="tracking-tight">
+        <p class="tracking-tight sm:text-base md:text-lg lg:text-xl">
           Bringing Warmth & Sweetness Since
           <i class="text-pink-300!">2023</i>&nbsp;!
         </p>
 
-        <p class="tracking-tight">
+        <p class="tracking-tight sm:text-base md:text-lg lg:text-xl">
           From fluffy marshmallows to rich chocolates
         </p>
 
-        <p class="tracking-tight">
+        <p class="tracking-tight sm:text-base md:text-lg lg:text-xl">
           Every treat is crafted with love to brighten your day!
         </p>
       </div>
