made home justify evenly

--- a/index.html
+++ b/index.html
@@ -273,9 +273,7 @@
       id="home"
       class="flex justify-center items-center lg:justify-end mt-32 mb-12"
     >
-      <div
-        class="flex items-center justify-center w-full max-w-6xl px-5 space-x-6"
-      >
+      <div class="flex items-center justify-evenly w-full max-w-6xl px-5">
         <!-- Heading Box -->
         <div
           class="text-pink-600 uppercase font-bold text-lg text-center leading-relaxed flex flex-col items-center space-y-2 p-2"
@@ -559,7 +557,7 @@
             </button>
             <button
               id="closeModal"
-              class="border border-pink-600 text-pink-600 px-5 py-1 rounded hover:bg-pink-700 hover:text-white"
+              class="border border-pink-600 text-pink-600 px-5 py-1 rounded hover:bg-pink-700 hover:text-white z-10"
             >
               Close
             </button>
