--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     />
     <title>Sunny Delights | A Sweet Dream</title>
   </head>
-  <body class="bg-black">
+  <body>
     <!-- HEADER AND NAVI BAR -->
     <header
       class="fixed top-0 z-10 w-full border-b border-pink-500"
@@ -538,7 +538,7 @@
         id="productModal"
         class="modal fixed inset-0 bg-black/75 hidden justify-center items-center"
       >
-        <div class="modal-content bg-white p-6 rounded-lg w-80 sm:w-96">
+        <div id="modalContent" class="bg-white p-6 rounded-lg w-80 sm:w-96">
           <img
             id="modalImage"
             class="w-full h-48 object-cover rounded-md mb-4"
@@ -565,12 +565,43 @@
         </div>
       </div>
 
-      <!-- Cart Counter -->
+      <!-- 🛒 Cart Modal -->
       <div
-        class="fixed bottom-5 right-5 bg-pink-600 text-white px-4 py-2 rounded-full"
+        id="cartContainer"
+        class="cartModal fixed inset-0 bg-black/75 hidden justify-center items-center"
+      >
+        <div class="bg-white p-6 rounded-lg w-80 sm:w-96">
+          <h2 class="text-2xl font-semibold mb-4">Your Cart</h2>
+          <div id="cartItems" class="mb-4">
+            <!-- Cart items will be injected here -->
+          </div>
+          <p class="text-lg font-bold">
+            Total: <span id="cartTotal">$0.00</span>
+          </p>
+          <div class="flex justify-center items-center gap-5 mt-4">
+            <!-- <button
+              id="cartButton"
+              class="bg-green-500 text-white px-4 py-1 rounded hover:bg-green-700"
+            >
+              Checkout
+            </button> -->
+            <button
+              id="closeCart"
+              class="border border-pink-600 text-pink-600 px-5 py-1 rounded hover:bg-pink-700 hover:text-white"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Cart Counter -->
+      <button
+        id="cartButton"
+        class="fixed hover:cursor-pointer bottom-5 right-5 bg-pink-600 text-white px-4 py-2 rounded-full hover:bg-pink-700"
       >
         🛒 Cart: <span id="cartCount">0</span>
-      </div>
+      </button>
     </section>
 
     <!-- FOOTER -->
