--- a/index.html
+++ b/index.html
@@ -72,33 +72,40 @@
   <body>
     <!-- HEADER AND NAVI BAR -->
     <header
-      class="fixed top-0 z-10 w-full border-b border-pink-500"
+      class="fixed top-0 z-10 w-full border-b border-pink-500 bg-pink-50/10 backdrop-blur-sm"
       x-data="{ open: false }"
+      aria-label="Main site header"
     >
       <nav
         class="mx-auto flex max-w-7xl items-center justify-between p-4 lg:px-6"
-        aria-label="Global"
+        aria-label="Global navigation"
       >
         <!-- Left: Logo -->
-        <div class="lg:flex lg:gap-x-10 flex items-center">
-          <a href="#home" class="flex gap-2 items-center">
+        <div class="flex items-center lg:gap-x-10">
+          <a href="#home" class="flex items-center gap-2">
             <img
               src="public/icon.png"
-              alt="Your Brand Logo"
+              alt="Sunny Delights logo"
               class="h-10 w-auto"
             />
-            <p
-              class="font-bold logo bg-gradient-to-b to-pink-500 bg-clip-text text-transparent italic"
-            >
+            <h1 class="relative font-bold italic text-pink-600">
               Sunny Delights
-            </p>
+              <span
+                aria-hidden="true"
+                class="absolute inset-0 bg-gradient-to-b from-pink-300 to-pink-500 bg-clip-text text-transparent"
+              >
+                Sunny Delights
+              </span>
+            </h1>
           </a>
         </div>
 
-        <!-- Middle: Search Bar (Hidden on small screens) -->
+        <!-- Middle: Search Bar -->
         <div class="hidden sm:flex items-center w-1/3">
           <div class="relative w-full">
+            <label for="search" class="sr-only">Search candies</label>
             <input
+              id="search"
               type="text"
               placeholder="Search candies..."
               class="w-full pl-10 pr-4 py-2 rounded-full border focus:outline-none focus:ring-2 focus:ring-pink-200 text-pink-600"
@@ -107,11 +114,12 @@
               class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
             >
               <svg
-                class="h-5 w-5 text-white"
+                class="h-5 w-5 text-pink-400"
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
                 viewBox="0 0 24 24"
                 stroke="currentColor"
+                aria-hidden="true"
               >
                 <path
                   stroke-linecap="round"
@@ -128,10 +136,10 @@
         <div class="flex items-center space-x-4">
           <button
             type="button"
-            class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-white lg:hidden"
+            class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-pink-500 hover:bg-pink-100 lg:hidden"
             @click="open = true"
+            aria-label="Open main menu"
           >
-            <span class="sr-only">Open main menu</span>
             <svg
               class="size-6"
               fill="none"
@@ -151,28 +159,25 @@
       </nav>
 
       <!-- Mobile Sidebar Menu -->
-      <div role="dialog" aria-modal="true">
+      <div role="dialog" aria-modal="true" x-show="open" x-cloak>
         <div
           id="sidebar"
-          class="fixed inset-y-0 right-0 z-10 w-64 overflow-y-auto px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-white text-center"
-          x-show="open"
+          class="fixed inset-y-0 right-0 z-20 w-64 overflow-y-auto bg-pink-50/95 px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-pink-200 text-center shadow-lg"
           x-transition:enter="transform transition ease-in-out duration-300"
           x-transition:enter-start="translate-x-full opacity-0"
           x-transition:enter-end="translate-x-0 opacity-100"
-          x-cloak
           @click.away="open = false"
         >
           <div class="flex items-center justify-between">
             <h2 class="text-pink-500 font-bold text-lg">Categories</h2>
             <button
               type="button"
-              class="-m-2.5 rounded-md p-2.5 text-white"
+              class="-m-2.5 rounded-md p-2.5 text-pink-500 hover:bg-pink-100"
               @click="open = false"
+              aria-label="Close menu"
             >
-              <span class="sr-only">Close menu</span>
               <svg
-                @keydown.escape.window="open = false"
-                class="size-6 text-pink-500"
+                class="size-6"
                 fill="none"
                 viewBox="0 0 24 24"
                 stroke-width="1.5"
@@ -187,61 +192,51 @@
               </svg>
             </button>
           </div>
-          <div class="mt-6 flow-root pt-4">
-            <div class="-my-6">
-              <div class="space-y-3 py-6">
-                <a
-                  href="#home"
-                  class="cat block rounded-lg px-3 py-2 text-base font-semibold text-white hover:bg-pink-300 hover:opacity-80 transition-colors duration-300 ease-in-out"
-                  @click="open = false"
-                  >Home</a
-                >
-                <hr class="text-pink-500" />
-                <a
-                  href="#about"
-                  class="cat block rounded-lg px-3 py-2 text-base font-semibold text-white hover:bg-pink-300 hover:opacity-80 transition-colors duration-300 ease-in-out"
-                  @click="open = false"
-                  >About</a
-                >
-                <hr class="text-pink-500" />
-                <a
-                  href="#"
-                  class="cat block rounded-lg px-3 py-2 text-base font-semibold text-white hover:bg-pink-300 hover:opacity-80 transition-colors duration-300 ease-in-out"
-                  @click="open = false"
-                  >Chocolates</a
-                >
-                <hr class="text-pink-500" />
-                <a
-                  href="#"
-                  class="cat block rounded-lg px-3 py-2 text-base font-semibold text-white hover:bg-pink-300 hover:opacity-80 transition-colors duration-300"
-                  @click="open = false"
-                  >Lollipops</a
-                >
-                <hr class="text-pink-500" />
-                <a
-                  href="#"
-                  class="cat block rounded-lg px-3 py-2 text-base font-semibold text-white hover:bg-pink-300 hover:opacity-80 transition-colors duration-300 ease-in-out"
-                  @click="open = false"
-                  >Candy</a
-                >
-                <hr class="text-pink-500" />
-                <a
-                  href="#"
-                  class="cat block rounded-lg px-3 py-2 text-base font-semibold text-white hover:bg-pink-300 hover:opacity-80 transition-colors duration-300 ease-in-out"
-                  @click="open = false"
-                  >Cookies</a
-                >
-                <hr class="text-pink-500" />
-                <a
-                  href="#"
-                  class="cat block rounded-lg px-3 py-2 text-base font-semibold text-white ease-in-out hover:bg-pink-300 hover:opacity-80 transition-colors duration-300"
-                  @click="open = false"
-                >
-                  Cakes
-                </a>
-              </div>
-            </div>
-          </div>
+
+          <nav class="mt-6 pt-4 space-y-3" aria-label="Mobile categories">
+            <a
+              href="#home"
+              class="block rounded-lg px-3 py-2 font-semibold text-pink-700 hover:bg-pink-200 transition"
+              @click="open = false"
+              >Home</a
+            >
+            <a
+              href="#about"
+              class="block rounded-lg px-3 py-2 font-semibold text-pink-700 hover:bg-pink-200 transition"
+              @click="open = false"
+              >About</a
+            >
+            <a
+              href="#"
+              class="block rounded-lg px-3 py-2 font-semibold text-pink-700 hover:bg-pink-200 transition"
+              @click="open = false"
+              >Chocolates</a
+            >
+            <a
+              href="#"
+              class="block rounded-lg px-3 py-2 font-semibold text-pink-700 hover:bg-pink-200 transition"
+              @click="open = false"
+              >Lollipops</a
+            >
+            <a
+              href="#"
+              class="block rounded-lg px-3 py-2 font-semibold text-pink-700 hover:bg-pink-200 transition"
+              @click="open = false"
+              >Candy</a
+            >
+            <a
+              href="#"
+              class="block rounded-lg px-3 py-2 font-semibold text-pink-700 hover:bg-pink-200 transition"
+              @click="open = false"
+              >Cookies</a
+            >
+            <a
+              href="#"
+              class="block rounded-lg px-3 py-2 font-semibold text-pink-700 hover:bg-pink-200 transition"
+              @click="open = false"
+              >Cakes</a
+            >
+          </nav>
         </div>
       </div>
     </header>
@@ -523,7 +518,7 @@
             src=""
             alt="Product Image"
           />
-          <h2 id="modalTitle" class="text-2xl font-semibold mb-2"></h2>
+          <p id="modalTitle" class="text-2xl font-semibold mb-2"></p>
           <p id="modalDescription" class="text-gray-700 mb-2"></p>
           <p id="modalPrice" class="text-lg font-bold mb-4"></p>
           <div class="flex justify-center items-center gap-5">
