--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
       <!-- Modal Structure -->
       <div
         id="productModal"
-        class="modal fixed inset-0 bg-black/75 hidden justify-center items-center p-4"
+        class="modal fixed inset-0 bg-black/75 hidden justify-center items-center p-4 z-50"
       >
         <div class="bg-white p-4 sm:p-6 rounded-lg w-full max-w-xs sm:max-w-sm">
           <img
