added crusor pointer on all buttons for a111y

--- a/index.html
+++ b/index.html
@@ -385,13 +385,13 @@
           <div class="flex justify-center items-center gap-3 sm:gap-5">
             <button
               id="addToCartButton"
-              class="bg-rose-600 text-white px-3 py-1 sm:px-4 sm:py-2 rounded hover:bg-rose-700"
+              class="bg-rose-600 text-white px-3 py-1 sm:px-4 sm:py-2 rounded hover:bg-rose-700 hover:cursor-pointer"
             >
               Add to Cart
             </button>
             <button
               id="closeModal"
-              class="border border-red-600 text-rose-600 px-3 py-1 sm:px-5 sm:py-2 rounded hover:bg-rose-700 hover:text-white"
+              class="border border-red-600 text-rose-600 px-3 py-1 sm:px-5 sm:py-2 rounded hover:bg-rose-700 hover:text-white hover:cursor-pointer"
             >
               Close
             </button>
@@ -417,7 +417,7 @@
           >
             <button
               id="closeCart"
-              class="border border-red-600 text-rose-600 px-3 py-1 sm:px-5 sm:py-2 rounded hover:bg-rose-700 hover:text-white"
+              class="border border-red-600 text-rose-600 px-3 py-1 sm:px-5 sm:py-2 rounded hover:bg-rose-700 hover:text-white hover:cursor-pointer"
             >
               Close
             </button>
@@ -428,7 +428,7 @@
       <!-- Cart Counter -->
       <button
         id="cartButton"
-        class="fixed bottom-4 right-4 bg-rose-600 text-white px-3 py-2 sm:px-4 sm:py-2 rounded-full hover:bg-rose-700"
+        class="fixed bottom-4 right-4 bg-rose-600 text-white px-3 py-2 sm:px-4 sm:py-2 rounded-full hover:bg-rose-700 hover:cursor-pointer"
       >
         🛒 Cart: <span id="cartCount">0</span>
       </button>
