--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
     <section
       id="home"
-      class="flex flex-col justify-center items-center  sm:pt-32 lg:pt-36 py-12 mt-12"
+      class="flex flex-col justify-center items-center sm:pt-32 lg:pt-36 py-12 mt-12"
     >
       <div class="w-full max-w-7xl px-4 sm:px-6">
         <!-- Heading -->
@@ -262,7 +262,7 @@
           >
             Soft as a Cloud Sweet as a Dream
           </div>
-          <p class="text-rose-400 text-sm sm:text-base opacity-70 ">
+          <p class="text-rose-400 text-sm sm:text-base opacity-70">
             Indulge in sweetness crafted with love
           </p>
           <p class="text-rose-400 text-sm sm:text-base opacity-60 mb-6">
@@ -328,6 +328,10 @@
             </div>
           </div>
           <div class="swiper-pagination mt-4"></div>
+
+          <!-- Arrows (for desktop) -->
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
         </div>
       </div>
     </section>
