added about us page

--- a/index.html
+++ b/index.html
@@ -530,6 +530,7 @@
             Information
           </p>
           <a
+            href="aboutus.html"
             class="hover:text-rose-600/80 transition duration-300 cursor-pointer"
             >About Us</a
           >
