--- a/index.html
+++ b/index.html
@@ -535,10 +535,12 @@
             >About Us</a
           >
           <a
+            href="contactus.html"
             class="hover:text-rose-600/80 transition duration-300 cursor-pointer"
             >Contact Us</a
           >
           <a
+            href="faq.html"
             class="hover:text-rose-600/80 transition duration-300 cursor-pointer"
             >FAQs</a
           >
@@ -553,6 +555,7 @@
             More Of Us
           </p>
           <a
+            href="events.html"
             class="hover:text-rose-600/80 transition duration-300 cursor-pointer"
             >Events</a
           >
