--- a/contactus.html
+++ b/contactus.html
@@ -9,7 +9,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="src/output.css" />
-    <title>Sunny Delights | About Us</title>
+    <title>Sunny Delights | Contact Us</title>
   </head>
   <body>
     <!-- HEADER AND NAVI BAR -->
@@ -152,87 +152,76 @@
             >Home</a
           >
           <a
-            href="#about"
+            href="about.html"
             class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
             >About</a
           >
           <a
-            href="#chocolates"
+            href="contact.html"
             class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
-            >Chocolates</a
-          >
-          <a
-            href="#lollipops"
-            class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
-            >Lollipops</a
-          >
-          <a
-            href="#candy"
-            class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
-            >Candy</a
-          >
-          <a
-            href="#cookies"
-            class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
-            >Cookies</a
-          >
-          <a
-            href="#cakes"
-            class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
-            >Cakes</a
+            >Contact</a
           >
         </nav>
       </aside>
     </header>
 
-    <section id="about" class="py-24 bg-rose-50 mt-10">
-      <div
-        class="max-w-6xl mx-auto px-6 grid md:grid-cols-2 gap-10 items-center"
-      >
-        <!-- Text Column -->
-        <div class="text-rose-600 leading-relaxed space-y-6">
-          <h1 class="text-5xl font-serif font-bold text-rose-500">
-            About Sunny Delights
-          </h1>
+    <!-- CONTACT SECTION -->
+    <section class="py-24 bg-rose-50 mt-10">
+      <div class="max-w-4xl mx-auto px-6">
+        <h1
+          class="text-5xl font-serif font-bold text-rose-500 mb-12 text-center"
+        >
+          Contact Us
+        </h1>
 
-          <p>
-            At <strong>Sunny Delights</strong>, we bring joy through handcrafted
-            sweets, chocolates, and candies. Our passion is creating treats that
-            brighten your day.
-          </p>
+        <form class="bg-rose-100 p-8 rounded-lg shadow-md space-y-6">
+          <div class="flex flex-col">
+            <label for="name" class="mb-2 font-semibold text-rose-600"
+              >Name</label
+            >
+            <input
+              id="name"
+              type="text"
+              placeholder="Your Name"
+              class="p-3 rounded-md border border-rose-300 focus:outline-none focus:ring-2 focus:ring-rose-500"
+            />
+          </div>
 
-          <p>
-            Founded in 2023, Sunny Delights started as a small home-based candy
-            project. We believe every sweet deserves love, care, and a sprinkle
-            of happiness.
-          </p>
+          <div class="flex flex-col">
+            <label for="email" class="mb-2 font-semibold text-rose-600"
+              >Email</label
+            >
+            <input
+              id="email"
+              type="email"
+              placeholder="your@email.com"
+              class="p-3 rounded-md border border-rose-300 focus:outline-none focus:ring-2 focus:ring-rose-500"
+            />
+          </div>
 
-          <p>
-            Our mission is simple: deliver high-quality, delicious treats to
-            every corner of the world. Each candy is crafted to bring smiles and
-            delight.
-          </p>
+          <div class="flex flex-col">
+            <label for="message" class="mb-2 font-semibold text-rose-600"
+              >Message</label
+            >
+            <textarea
+              id="message"
+              placeholder="Your message..."
+              rows="6"
+              class="p-3 rounded-md border border-rose-300 focus:outline-none focus:ring-2 focus:ring-rose-500 resize-none"
+            ></textarea>
+          </div>
 
-          <p>
-            We love only the finest ingredients, sourced responsibly, ensuring
-            every bite is fresh, tasty, and memorable. We love sharing our
-            sweets at local events and engaging with our community. Join us for
-            seasonal creations that celebrate the joy of sweetness.
-          </p>
-        </div>
-
-        <!-- Image Column -->
-        <div class="flex justify-center items-center mx-auto md:justify-end">
-          <img
-            src="public/store.png"
-            alt="Sunny Delights storefront"
-            class="rounded-lg shadow-md w-80 md:w-[24rem] object-cover"
-          />
-        </div>
+          <button
+            type="submit"
+            class="bg-rose-600 text-white px-6 py-3 rounded-full hover:bg-rose-700 transition duration-300"
+          >
+            Send Message
+          </button>
+        </form>
       </div>
     </section>
 
-    <!-- CART ICON (reuse from homepage) -->
+    <!-- CART ICON -->
     <button
       id="cartButton"
       class="fixed bottom-4 right-4 bg-rose-600 text-white px-3 py-2 sm:px-4 sm:py-2 rounded-full hover:bg-rose-700 hover:cursor-pointer"
