--- a/events.html
+++ b/events.html
@@ -9,7 +9,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="src/output.css" />
-    <title>Sunny Delights | About Us</title>
+    <title>Sunny Delights | Events</title>
   </head>
   <body>
     <!-- HEADER AND NAVI BAR -->
@@ -152,87 +152,87 @@
             >Home</a
           >
           <a
-            href="#about"
+            href="about.html"
             class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
             >About</a
           >
           <a
-            href="#chocolates"
+            href="contact.html"
             class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
-            >Chocolates</a
+            >Contact</a
           >
           <a
-            href="#lollipops"
+            href="events.html"
             class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
-            >Lollipops</a
+            >Events</a
           >
           <a
-            href="#candy"
+            href="faq.html"
             class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
-            >Candy</a
-          >
-          <a
-            href="#cookies"
-            class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
-            >Cookies</a
-          >
-          <a
-            href="#cakes"
-            class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
-            >Cakes</a
+            >FAQs</a
           >
         </nav>
       </aside>
     </header>
 
-    <section id="about" class="py-24 bg-rose-50 mt-10">
-      <div
-        class="max-w-6xl mx-auto px-6 grid md:grid-cols-2 gap-10 items-center"
-      >
-        <!-- Text Column -->
-        <div class="text-rose-600 leading-relaxed space-y-6">
-          <h1 class="text-5xl font-serif font-bold text-rose-500">
-            About Sunny Delights
-          </h1>
+    <!-- EVENTS SECTION -->
+    <section class="py-24 bg-rose-50 mt-10">
+      <div class="max-w-5xl mx-auto px-6">
+        <h1
+          class="text-5xl font-serif font-bold text-rose-500 mb-12 text-center"
+        >
+          Upcoming Events
+        </h1>
 
-          <p>
-            At <strong>Sunny Delights</strong>, we bring joy through handcrafted
-            sweets, chocolates, and candies. Our passion is creating treats that
-            brighten your day.
-          </p>
+        <div class="grid gap-8 md:grid-cols-2">
+          <div class="bg-rose-100 rounded-lg shadow-md p-6">
+            <h2 class="text-2xl font-bold text-rose-600 mb-2">
+              Candy Making Workshop
+            </h2>
+            <p class="text-rose-700 mb-2">Date: October 20, 2025</p>
+            <p class="text-rose-700">
+              Join our hands-on candy making workshop. Learn to craft chocolates
+              and sweets from our expert team.
+            </p>
+          </div>
 
-          <p>
-            Founded in 2023, Sunny Delights started as a small home-based candy
-            project. We believe every sweet deserves love, care, and a sprinkle
-            of happiness.
-          </p>
+          <div class="bg-rose-100 rounded-lg shadow-md p-6">
+            <h2 class="text-2xl font-bold text-rose-600 mb-2">
+              Halloween Sweet Sale
+            </h2>
+            <p class="text-rose-700 mb-2">Date: October 31, 2025</p>
+            <p class="text-rose-700">
+              Enjoy spooky-themed candies and exclusive Halloween discounts at
+              Sunny Delights.
+            </p>
+          </div>
 
-          <p>
-            Our mission is simple: deliver high-quality, delicious treats to
-            every corner of the world. Each candy is crafted to bring smiles and
-            delight.
-          </p>
+          <div class="bg-rose-100 rounded-lg shadow-md p-6">
+            <h2 class="text-2xl font-bold text-rose-600 mb-2">
+              Christmas Treats Pop-Up
+            </h2>
+            <p class="text-rose-700 mb-2">Date: December 15, 2025</p>
+            <p class="text-rose-700">
+              Celebrate the holiday season with our limited-edition Christmas
+              treats and sweets.
+            </p>
+          </div>
 
-          <p>
-            We love only the finest ingredients, sourced responsibly, ensuring
-            every bite is fresh, tasty, and memorable. We love sharing our
-            sweets at local events and engaging with our community. Join us for
-            seasonal creations that celebrate the joy of sweetness.
-          </p>
-        </div>
-
-        <!-- Image Column -->
-        <div class="flex justify-center items-center mx-auto md:justify-end">
-          <img
-            src="public/store.png"
-            alt="Sunny Delights storefront"
-            class="rounded-lg shadow-md w-80 md:w-[24rem] object-cover"
-          />
+          <div class="bg-rose-100 rounded-lg shadow-md p-6">
+            <h2 class="text-2xl font-bold text-rose-600 mb-2">
+              Valentine's Day Special
+            </h2>
+            <p class="text-rose-700 mb-2">Date: February 14, 2026</p>
+            <p class="text-rose-700">
+              Gift your loved ones handcrafted candies and chocolates made with
+              love at Sunny Delights.
+            </p>
+          </div>
         </div>
       </div>
     </section>
 
-    <!-- CART ICON (reuse from homepage) -->
+    <!-- CART ICON -->
     <button
       id="cartButton"
       class="fixed bottom-4 right-4 bg-rose-600 text-white px-3 py-2 sm:px-4 sm:py-2 rounded-full hover:bg-rose-700 hover:cursor-pointer"
