--- a/index.html
+++ b/index.html
@@ -131,6 +131,14 @@
           ></ul>
         </div>
 
+        <!-- Desktop links -->
+        <div
+          class="hidden lg:flex items-center gap-6 text-pink-100 font-semibold"
+        >
+          <a href="home" class="hover:text-white transition-colors">Home</a>
+          <a href="faq.html" class="hover:text-white transition-colors">FAQ</a>
+        </div>
+
         <!-- Mobile menu button -->
         <div class="flex items-center">
           <button
@@ -158,16 +166,8 @@
         </div>
       </nav>
 
-      <!-- overlay -->
-      <div
-        x-show="open"
-        x-cloak
-        x-transition.opacity
-        class="fixed inset-0 z-30 bg-black/40"
-        @click="open = false"
-        aria-hidden="true"
-      ></div>
       <aside
+        id="mobileSidebar"
         x-show="open"
         x-cloak
         x-transition:enter="transform transition ease-in-out duration-300"
@@ -183,7 +183,20 @@
         aria-modal="true"
       >
         <div class="flex items-center justify-between px-6 pt-6">
-          <h2 class="text-white font-bold text-lg">Categories</h2>
+          <div
+            class="flex items-center gap-3 bg-pink-100/80 p-1 px-2 border border-red-600 rounded-2xl"
+          >
+            <a href="#home" class="flex items-center gap-2">
+              <img
+                src="public/icon.png"
+                alt="Sunny Delights logo"
+                class="h-6 sm:h-8 w-auto"
+              />
+              <h1 class="font-bold italic text-red-600 text-sm sm:text-base">
+                Sunny Delights
+              </h1>
+            </a>
+          </div>
           <button
             type="button"
             class="rounded-md p-2.5 text-white hover:bg-white/10"
@@ -206,6 +219,42 @@
           </button>
         </div>
 
+        <!-- after the last category link inside the sidebar nav -->
+        <div class="mt-4 border-t border-white/20 pt-4">
+          <label for="mobile-searchbox" class="sr-only">Search candies</label>
+          <div class="relative">
+            <input
+              id="mobile-searchbox"
+              type="text"
+              placeholder="Search candies..."
+              class="w-full pl-10 pr-4 py-2 rounded-full focus:outline-none focus:ring-2 focus:ring-white text-white placeholder-white bg-rose-500/70 border border-white/10"
+            />
+            <div
+              class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
+            >
+              <svg
+                class="h-5 w-5 text-white"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+                aria-hidden="true"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M21 21l-4.35-4.35M17 11a6 6 0 11-12 0 6 6 0 0112 0z"
+                />
+              </svg>
+            </div>
+            <ul
+              id="mobile-hits-dropdown"
+              class="absolute top-full left-0 w-full mt-1 bg-white text-rose-800 rounded-lg shadow-lg max-h-60 overflow-y-auto hidden z-50"
+            ></ul>
+          </div>
+        </div>
+
         <nav class="mt-6 px-6 pb-6 flex flex-col justify-start space-y-3">
           <a
             href="#home"
@@ -220,34 +269,28 @@
             >About</a
           >
           <a
-            href="#chocolates"
+            href="contactus.html"
             class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
             @click="open = false"
-            >Chocolates</a
+            >Contact</a
           >
           <a
-            href="#lollipops"
+            href="faq.html"
             class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
             @click="open = false"
-            >Lollipops</a
+            >Faq</a
           >
           <a
-            href="#candy"
+            href="events.html"
             class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
             @click="open = false"
-            >Candy</a
+            >Events</a
           >
           <a
-            href="#cookies"
+            href="jobs.html"
             class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
             @click="open = false"
-            >Cookies</a
-          >
-          <a
-            href="#cakes"
-            class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
-            @click="open = false"
-            >Cakes</a
+            >Jobs</a
           >
         </nav>
       </aside>
