made the logo an anchor for home in all pages

--- a/aboutus.html
+++ b/aboutus.html
@@ -252,7 +252,7 @@
     </header>
 
     <!-- Main Section -->
-    <section id="about" class="py-24 bg-rose-50 mt-10">
+    <section id="home" class="py-24 bg-rose-50 mt-10">
       <div
         class="max-w-6xl mx-auto px-6 grid md:grid-cols-2 gap-10 items-center"
       >
