--- a/events.html
+++ b/events.html
@@ -250,7 +250,7 @@
     </header>
 
     <!-- EVENTS SECTION -->
-    <section class="py-24 bg-rose-50 mt-10">
+    <section id="home" class="py-24 bg-rose-50 mt-10">
       <div class="max-w-5xl mx-auto px-6">
         <h1
           class="text-5xl font-serif font-bold text-rose-500 mb-12 text-center"
